compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_syntax_function_param_missing_comma.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/diagnostics/syntax/function_param_missing_comma.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × could not parse Riot ML source
   ╭─[tests/fixtures/diagnostics/syntax/function_param_missing_comma.ml:1:16]
 1 │ fn format(left right) {
   ·                ──┬──
   ·                  ╰── expected `,` between function parameters
 2 │   left
   ╰────
  help: insert a comma before the next parameter
